# swarm-learning-master-thesis

./: .env.dev  .gitignore  Makefile  README.md  conda-environment.yml  conftest.py  edge_main.py  main.py  makefile  pyproject.toml  requirements.txt
.github/workflows/: code_fmt.yml  docker-image.yml  python-app.yml
common/: datasets.py  enums.py  groundtruth_utils.py  imports.py  logger.py  model.py  models.py  static_params.py  utilities.py
communication/: README.md  docker-compose.yml
communication/client/: Dockerfile  client.py
communication/scheduler/: Dockerfile  scheduler.py
communication/server/: Dockerfile  server.py
compare/: example-1-data.ipynb  notebook.ipynb  test.html
compare/models/: default.py
compare/utils/: __init__.py  data_handler.py  logging.py  main.py  model_manager.py  training_handler.py
compare/utils/data/: data_handler.py
compare/utils/models/: __init__.py  default.py
compare/utils/templates/: config_message.md  config_schema.json
compare/utils/training/: __init__.py  aggregators.py  centralised.py  federated.py  general.py  strategies.py  swarm.py  tests.py  utils.py
conda-environment-files/: conda-environment-cpu-unix.yml  conda-environment-gpu-unix.yml
discovery-sandbox/: alex-testing.ipynb
docker/: Dockerfile  README.md
edge_code/: data_loader.py  edge_main.py  paramiko_ssh.py  ping_listener.sh
edge_com/: client_run.py  edge_com.py  edge_handler.py
experiments/: Readme.md
experiments/FixMatchSeg/: config.json
experiments/HolisticPath/: HolisticPath.ipynb  Makefile  config.json  config_test_1.json  config_test_10.json  config_test_11.json  config_test_12.json  config_test_15.json  config_test_18.json  config_test_21.json  config_test_22.json  config_test_23.json  config_test_24.json  config_test_26.json  config_test_3.json  config_test_30.json  config_test_5.json  config_test_60.json  config_test_8.json  decentralised_config.json  nohup.out
experiments/centralized-federated-swarm/: FL_SL_HP.ipynb  HP_Parallel_Swarm.ipynb
experiments/conda-environment-files/: conda-environment-cpu-unix.yml
experiments/meanstd/: calculate_mean_std.py
not_in_use/: centralized.py  main.py  swarm_client.py
not_in_use/experiments/centralized-federated-swarm/: FL_SL_HP.ipynb
platform/: README.md  example-0-platform.ipynb  example-1-data.ipynb  example-1a-data-balanced.ipynb  example-2-basic-runs.ipynb  example-3-fixmatchseg.ipynb  find_data.ipynb  notebook.ipynb  run_platform.py  sample-config.json
platform/src/: main.py  setup.py
platform/src/fedswarm/: main.py
server_code/: data_partitioner.py  federated.py  federated_starter.py  flwr_client.py  ray_client_proxy_flwr.py  shared_dict.py  sim_app_flwr.py
server_code/clients/: flwr_client.py  simulated_train.py
server_code/strategies/: base_strategy.py
source/: centralized.py  datasets.py  federated.py  models.py  static_params.py  swarm.py  utilities.py
source/CutLer/: README.md  cutler_colab_demo.ipynb
source/FixMatchSeg/: centralized.py  centralized_all.py  config.json  datasets.py  fixmatch_utils.py  imports.py  models.py  randaugment.py  static_params.py  supervised.py  train.py
source/FixMatchSeg/GroundTruth/: gt_utils.py
source/FixMatchSeg/Notebooks/: Train.ipynb  TrainFixMatchSeg.ipynb
source/HolisticPath/: centralized.py  datasets.py  federated.py  groundtruth_utils.py  imports.py  main.py  models.py  static_params.py  swarm.py  swarm_client.py  utilities.py
source/HolisticPath/Notebooks/: Train.ipynb
source/HolisticPath_PL/: centralized.py  config.json  datasets.py  exp-1.txt  exp-2.txt  exp-3.txt  federated.py  frames_with_less_than_165m_hp.json  gt_utils.py  imports.py  models.py  static_params.py  supervised-output.txt  supervised.py  supervised_all.py  train.py
source/HolisticPath_PL/Notebooks/: Train.ipynb
src/: README.md
src/client/: client_main.py
src/common/: datasets.py  groundtruth_utils.py  logger.py  models.py  static_params.py  utilities.py
src/fleetlearning/: Dockerfile  README.md  configure_node_ips.py  docker-compose-template.yml  docker-compose.yml
src/fleetlearning/client/: client_main.py
src/fleetlearning/common/: datasets.py  groundtruth_utils.py  ip_utils.py  models.py  socket_utils.py  static_params.py  utilities.py
src/fleetlearning/scheduler/: data_loader.py  scheduler_main.py  train.py
src/fleetlearning/server/: data_partitioner.py  fleet_aggregators.py  server_main.py
src/scheduler/: data_loader.py  scheduler_main.py  train.py
src/server/: data_partitioner.py  fleet_aggregators.py  server_main.py
static-site/: index.html
test/: data_test.py  node_train_test.py
test/integration/: test_client.py  test_full.py  test_server.py
test/unit/: test_dataloader.py  test_dataset.py
test/utils/: cleanup.py
tests/edgelab/integration/: test_server.py
tests/edgelab/unit/: test_dataloader.py
tests/integration/: test_client.py  test_full.py  test_server.py
tests/unit/: test_dataloader.py  test_dummy.py
tests/unit/common/: test_static_params.py
tests/utils/: cleanup.py
thesis-source-code/: README.md  environment.yml
thesis-source-code/conda-environment-files/: conda-environment-gpu-unix.yml
thesis-source-code/platform/: README.md  example-0-platform.ipynb  example-3-fixmatchseg.ipynb  requirements.txt  run_platform.py
(+148 files in other folders)
